examples/test/testpolicy7769.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7769
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key17: value29
      key6: value19
      key23: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value4
          key42: value12
      podSelector:
        matchLabels:
          key38: value32
          key25: value48
          key24: value5
